# Entangled-State-Attention_v2

./: .gitignore  LICENSE  README.md  gitignore.txt  pyproject.toml
.esa_remove_public_lightning_backup_20260711_222854/esa/: layer.py
.esa_remove_public_lightning_backup_20260711_222854/esa/backends/: __init__.py
esa/: __init__.py  benchmark.py  boost.py  compass.py  config.py  constants.py  generation.py  layer.py  model.py  precision.py  trainer.py
esa/backends/: __init__.py  flare.py  lightning.py  pulse.py  thunder.py
examples/: basic_usage.py  compass_usage.py  esa_model_lifecycle.py
tests/: test_api.py  test_compile_defaults.py  test_optimized_defaults.py  test_release_consistency.py  test_v2_1_model_lifecycle.py
